<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindTheToilet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="section_map">Map</string>
    <string name="section_settings">Settings</string>
    <string name="section_account">Account</string>
    <string name="section_debug">Debug</string>
    <string name="fragment_account_login">Login</string>
    <string name="fragment_account_signup">SignUp</string>
    <string name="fragment_account_signup_hint_username">Pick a username</string>
    <string name="fragment_account_signup_hint_email">Your email</string>
    <string name="fragment_account_signup_hint_passwd">Create a password</string>
    <string name="fragment_account_signup_hint_repeat_passwd">Repeat your password</string>
    <string name="fragment_account_signup_warnning_message">Please do not use special characters, accents, apostrophies, etc&#8230; when creating your profile</string>
    <string name="fragment_account_login_hint_username">Your username</string>
    <string name="fragment_account_login_hint_passwd">Your password</string>
    <string name="fragment_account_change_view_to_signup">Don\'t have an acount?\nSign Up</string>
    <string name="fragment_account_change_view_to_login">Already have an account?\nSign In</string>
    <string name="fragment_account_signup_email_invalid">Email Invalid</string>
    <string name="fragment_account_signup_passwd_repeat_invalid">Password Repeat Invalid</string>
    <string name="fragment_account_signup_username_invalid">username should only include letter, number or underlines</string>
    <string name="fragment_account_signup_passwd_invalid">Password should only include letter, number or underlines</string>
    <string name="fragment_account_info_username">Username:</string>
    <string name="fragment_account_info_email">Email:</string>
    <string name="fragment_account_info_permission">Permission:</string>
    <string name="success_login">Login Success</string>
    <string name="success_signup">Signup Success</string>
    <string name="error_connection">Connection Error. Please check your Net Connection.</string>
    <string name="error_username_invalid">This username does not exist.</string>
    <string name="error_username_taken">Username is already taken</string>
    <string name="error_passwd_invalid">The password is incorrect.</string>
    <string name="error_unknow">Unknow Error</string>
    <string name="local_vaild_for_login_failed">Username or Password incorrect. Please double check.</string>
    <string name="description_imageView_locate">this view is used to center the map where the user is.</string>
    <string name="error_route_not_found">Sorry, we can\'t find any rout to the position.</string>
    <string name="waiting_for_gps">Waiting for GPS remain stable</string>
    <string name="lead_me_now">Lead Me Now !</string>
    <string name="city_not_cached">City information does not exits, can not locate immediately.</string>
    <string name="sign_out">Sign out</string>
    <string name="settings_max_show_toilet_num">Maximum Number Of Toilet</string>
    <string name="summary_max_show_toilet_num">digital only</string>
    <string name="settings_store_zoom_level">Store zoom level</string>
    <string name="settings_size_of_threadpool">Size of Thread Pool</string>
    <string name="settings_server_address">Server Address</string>
    <string name="settings_server_port">Server Port</string>

</resources>