<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_account_login_hint_username" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_login_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_account_login_hint_passwd"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_account_login" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_changeViewToSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_account_change_view_to_signup"
        android:textSize="18sp"
        android:gravity="center_horizontal" />

</LinearLayout>