<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_account_info_username"
                android:textSize="@dimen/info_text_size" />

            <TextView
                android:id="@+id/textView_info_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:textSize="@dimen/info_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_account_info_permission"
                android:textSize="@dimen/info_text_size" />

            <TextView
                android:id="@+id/textView_info_permission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:textSize="@dimen/info_text_size" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out" />

</LinearLayout>